feat: 컴포넌트 분리, 다국어 테스트

--- a/src/locales/en-US/translation.json
+++ b/src/locales/en-US/translation.json
@@ -27,8 +27,7 @@
     "more-from": "more from"
   },
   "editor": {
-    "title": "editor's pick",
-    "sub-title": "{{sentence}}"
+    "title": "editor's pick"
   },
   "card": {
     "date": "{{val, relativetime}}"
