feat: 좋아요 로컬 스토리지 저장 기능 개발, 다국어 테스트

--- a/src/locales/en-US/translation.json
+++ b/src/locales/en-US/translation.json
@@ -27,9 +27,12 @@
     "more-from": "more from"
   },
   "editor": {
-    "title": "editor's pick"
+    "title": "editors' pick"
   },
   "card": {
     "date": "{{val, relativetime}}"
+  },
+  "history": {
+    "clear": "clear"
   }
 }
