feat: 비즈니스 로직 분리

--- a/src/locales/en-US/translation.json
+++ b/src/locales/en-US/translation.json
@@ -10,7 +10,7 @@
     "category": "Category",
     "channel": "Channel",
     "privacy": "Privacy Policy",
-    "terms": "Terms and Conditions",
+    "service": "Terms and Conditions",
     "copyright": "Copyright ®{{year}} Weathernews Inc. All rights reserved"
   },
   "nav": {
