--- a/src/locales/ja-JP/translation.json
+++ b/src/locales/ja-JP/translation.json
@@ -10,7 +10,7 @@
     "category": "カテゴリー",
     "channel": "水路",
     "privacy": "プライバシー規約",
-    "terms": "利用規約",
+    "service": "利用規約",
     "copyright": "Copyright ®{{year}} Weathernews Inc. All rights reserved"
   },
   "nav": {
