--- a/src/locales/ko-KR/translation.json
+++ b/src/locales/ko-KR/translation.json
@@ -10,7 +10,7 @@
     "category": "카테고리",
     "channel": "채널",
     "privacy": "개인정보처리방침",
-    "terms": "이용약관",
+    "service": "이용약관",
     "copyright": "Copyright ®{{year}} Weathernews Inc. All rights reserved"
   },
   "nav": {
