feat: 개인정보 처리방침, 이용약관 페이지 추가

--- a/src/locales/ja-JP/translation.json
+++ b/src/locales/ja-JP/translation.json
@@ -34,5 +34,80 @@
   },
   "history": {
     "clear": "消すんです"
+  },
+  "privacy": {
+    "main-title": "プライバシーポリシー",
+    "main-contents": "株式会社ウェザーニューズ（当社）では、当社サービスと当社が運営するウェブサイトをご利用いただくお客様の個人情報の重要性を認識し、その取り扱いについて細心の注意を払っています。当社は、高度な情報通信社会における個人情報保護の重要性を認識し、個人情報の取扱いについて個人情報保護に関する法律その他個人情報保護関連法令及びガイドラインを厳守するとともに、以下の方針に基づき個人情報保護に努めています。",
+    "sub-title1": "個人情報の取得について",
+    "sub-contents1-1": "・　当社は適法かつ公正な手段で個人情報を取得します。",
+    "sub-contents1-2": "・　当社ウェブサイトでは、サービスの提供にあたり、サービス会員制サイトと電子メールの転送、アンケート調査等を通じて、利用目的を明示した上で個人情報を登録していただく場合があります。",
+    "sub-title2": "個人情報の利用について",
+    "sub-title2-1": "・　当社は保有する個人情報を事前に公表したり、取得時にお知らせした利用目的の範囲内で、業務遂行上必要な場合に限り利用します。",
+    "sub-title2-2": "・　当社が保有する個人情報の利用目的は次のとおりです。",
+    "sub-title2-3": "(1)　当社は以下の目的でお客様の個人情報を利用することができます。",
+    "sub-contents2-3-a": "a. サービス提供や契約手続き等のため",
+    "sub-contents2-3-b": "b. 物品、書類の発送等のため",
+    "sub-contents2-3-c": "c. 展示会、見学会などの当社イベントやサービスのご案内のため",
+    "sub-contents2-3-d": "d. お客様から当社へのお問い合わせ等の対応のため",
+    "sub-contents2-3-e": "e. 人事労務管理に関するあらゆる手続のため",
+    "sub-contents2-3-f": "f. サービスから第三者による効果的な広告配信のため",
+    "sub-contents2-4": "(2) 当社は、個人情報の取扱いを第三者に委託する場合において、個人情報を適切に取り扱っていると認められる委託先を選定した上で、委託先の個人情報安全管理について必要及び適切な監督を行います。",
+    "sub-contents2-5": "(3) 当社は利用目的範囲内で、当社の関連会社（有価証券報告書に記載されている連結子会社）との間で、個人情報を共同利用する場合があります。",
+    "sub-contents2-5-a": "a. 共同利用する個人情報項目",
+    "sub-contents2-5-a-1": "会社名、所属先、氏名、肩書き、住所、電話番号、メールアドレス、会社のホームページアドレス、音声データ、ファックス番号その他名刺等に記載される連絡先情報",
+    "sub-contents2-5-b": "b. 共同で利用する者の範囲",
+    "sub-contents2-5-b-1": "当社有価証券報告書記載の関係会社",
+    "sub-contents2-5-b-2": "【有価証券報告書URL】",
+    "sub-contents2-5-c": "c. 利用する者の利用目的",
+    "sub-contents2-5-c-1": "当社サービス提供に関する業務のため",
+    "sub-contents2-5-d-1": "d. 共同利用の管理責任者",
+    "sub-contents2-5-d-2": "株式会社 Weathernews",
+    "sub-title3": "個人情報の第三者提供について",
+    "sub-contents3-1": "・　当社は以下に定める場合を除き、保有している個人情報を事前に本人の同意を得ることなく第三者に提供しません。",
+    "sub-contents3-1-1": "(1) 法令に基づく場合",
+    "sub-contents3-1-2": "(2) 人の生命、身体又は財産の保護のため必要がある場合であり、本人の同意を得ることが困難なとき",
+    "sub-contents3-1-3": "(3) 公衆衛生の向上又は児童の健全な育成の推進のために特に必要な場合であり、本人の同意を得ることが困難なとき",
+    "sub-contents3-1-4": "(4) 国の機関又は地方自治体又はその委託を受けた者が法令で定める事項を遂行することについて協力する必要がある場合であり、本人の同意を得ることにより当該事務の遂行に支障を及ぼす危険があるとき",
+    "sub-title4": "個人情報の委託先管理",
+    "sub-contents4-1": "お客様の個人情報の取扱いを第三者に委託する場合には、契約締結等により委託先についても安全な情報管理が図られるよう適切に監督します。",
+    "sub-title5": "個人情報管理について",
+    "sub-contents5-1": "・　当社は個人情報の正確性を維持するために努力し、またこれを安全に管理します。",
+    "sub-contents5-2": "・　当社は取り扱う個人情報の滅失、毀損、操作及び漏洩等を防止し、安全管理を図るため、不正アクセス、コンピュータウイルス等に対する情報セキュリティ対策を含む適切な措置を講じます。",
+    "sub-title6": "個人情報閲覧等について",
+    "sub-contents6-1": "・　当社は保有する個人情報に関する閲覧等（利用目的の通知、公開、訂正·追加·削除、利用の停止·削除）請求に適切に対応します。",
+    "sub-contents6-2": "・　当社が保有する個人情報について閲覧等をご希望の場合は、「お問い合わせ窓口(https://ko.weathernews.com/contact/)」までご連絡ください。 閲覧等の連絡を受けた場合は、本人からの 連絡であることを確認するために、本人確認書類の提示などを求めることができます。",
+    "sub-title7": "意見等の対応",
+    "sub-contents7-1": "・　当社の個人情報の取り扱いについてご意見、ご質問、ご苦情がございましたら、当社「お問い合わせ窓口(https://ko.weathernews.com/contact/)」までご連絡ください。",
+    "sub-title8": "組織·体制",
+    "sub-contents8-1": "・　当社は個人情報管理者を任命し、個人情報の適正管理を行います。",
+    "sub-contents8-2": "・　当社は役員及び従業員に対し、個人情報の保護及び適正管理方法についての研修を実施し、日常業務に対する個人情報の適正取扱いを徹底します",
+    "sub-title9": "個人情報保護法令遵守基本規定の策定·実施·維持·改善",
+    "sub-title9-1": "・ 当社は、この方針を実行するために個人情報保護法令遵守基本規定（本方針、『個人情報保護規程』及びその他の規定、規則を含む。）を策定し、これを当事従事者その他の関係者に徹底的に周知·実施し、維持し、継続的に改善していきます。",
+    "footer-txt1": "2012年1月16日制定",
+    "footer-txt2": "2019年9月4日改正",
+    "footer-txt3": "株式会社 Weathernews 代表取締役社長 草開千仁",
+    "sub-title10": "リンク先の取り扱いについて",
+    "sub-contents10-1": "当社ウェブサイトでは、他のウェブサイトへのリンクを設定している場合がありますが、リンク先での個人情報の取り扱いに関してはリンク先のウェブサイトでご確認ください。当社ウェブサイト外で行われる個人情報の入力につきましては、当社は一切の責任を負いかねますのでご了承ください。",
+    "sub-title11": "アクセスログの活用について",
+    "sub-contents11-1": "本サイトはユーザー利便性向上のため、利用者の皆様のアクセスログを収集しています。 アクセスログの収集と解釈にはGoogle Analyticsを使用しています。 Google Analyticsでは、Cookieを利用して個人を特定できない方法でログを収集しています。",
+    "sub-title12": "ソーシャルメディアのプラグインについて",
+    "sub-contents13-1": "当社ウェブサイト上部には、“Facebook”をはじめとするソーシャルメディアネットワーク（SNS）のプラグインが導入されています。 当該プラグイン機能を使用してSNSのウェブサイトを閲覧する場合、当該SNSに対して、ユーザーが接続しているサイト等の情報が自動的に送信されることがあります。 送信される情報の範囲及び利用目的等について、各SNS事業者の個人情報処理方針は、各事業者のサイト等で確認をお願いします。"
+  },
+  "service": {
+    "title1": "利用規約",
+    "contents1": "株式会社ウェザーニューズ（以下「ウェザーニューズ」といいます）がウェブサイトで提供する気象コンテンツ（以下「本コンテンツ」といいます。）は気象学的解釈によるものです。この気象学的解析による気象予測情報には、解析方法に内在する限界（適さないリスク）が存在します。そのような解釈の基礎とならない急激な気象要因の変化などの予測不可能な要因により、予報と実際の気象状況に差が生じることがあります。また、地形などの局地的な要因による小規模の特異な気象状況に関しては予報との違いが生じることがあります。自然における地上·気象·水上の急激な変化は、予測できない要素と人間の想像を超える要因によって不可測の事態が発生する可能性を常に秘めています。当社ウェブサイトをご利用いただく際には、利用者本人の行動を決定する際のあくまで参考としてご利用いただき、出発前に現地で最新情報を確認するなど、利用者自らがあらゆるリスクに備える準備または行動を行ってください。ウェザーニューズ及びその役員、従業員は、本コンテンツの情報に基づき、又は本コンテンツの情報を信頼して行った活動によって生じたいかなる生命、身体、財産上の損失又は損害についても責任を負わないことを予めご了承ください。",
+    "title2": "著作権について",
+    "contents2": "本コンテンツの著作権は原則としてウェザーニューズに帰属します。個別コンテンツ著作権のほか、ホームページの形で編集したことによる編集著作権もウェザーニュースに帰属します。ただし、株式会社ウェザーニューズの職員以外の者による寄稿や外部写真家による写真などの著作権は原則として原著作者に帰属します。",
+    "title3": "著作権の取り扱い",
+    "contents3": "本コンテンツを、著作権法上許容される「私的使用」や「引用」などの範囲を超えて使用する場合、ウェザーニューズの使用許諾を得なければなりません。外部への寄稿に関しては、原著作者の許可も必要です。当社ウェブサイトの画面を許可なく複製、翻訳、翻案、放送、出版、販売、貸与するなどの行為を禁止します。なお、営利団体、非営利団体、個人を問わず当社ウェブサイト以外のホームページ、PC通信、イントラネット、Eメール等で本コンテンツの全部または一部を株式会社ウェザーニュースの承諾なしに転用することは著作権侵害に該当するため禁止します。",
+    "title4": "許容される“引用”の範囲",
+    "contents4": "著作権法による“引用”とは、報道、批評、研究その他の目的で出典と引用部分を明示して目的上正当な範囲内で記事の一部を使用する行為を指します。 また、引用部分以外の部分と引用部分との間に「主従」関係があることが必要です。これらの条件が満たされない場合、著作権法で認められている引用に該当しないため、ウェザーニューズの使用許諾が必要です",
+    "title5": "コンテンツ専用",
+    "contents5": "ウェザーニューズの許可なしに当社ウェブサイト独自のコンテンツを改変、要約してコンテンツを転用することを禁止します。",
+    "title6": "コンテンツ·ダウンロード",
+    "contents6": "個人が私的利用目的で本コンテンツを自分のパソコンにダウンロードすることは、著作権法で認められる“私的使用のための複製”に原則該当するものと解します。ただし、ダウンロードしたコンテンツを使用できるのは本人またはその同居家族に限ります。個人がダウンロードした場合でも、これを会社などで本人以外に対して利用させるのは営利または非営利の目的を問わず「私的使用」の範囲を超えるため、ウェザーニューズの許可が必要です。",
+    "title7": "紛争解決",
+    "contents7": "本コンテンツ利用に関して当社と利用者との間で発生する一切の紛争は、韓国法に準拠し、ソウル中央地裁を専属的管轄裁判所とする訴訟で解決します。",
+    "contents7-1": "当社は上記の内容を訂正する場合があります。 そのような場合、すべての情報はこのページからお知らせします。"
   }
 }
