--- a/src/locales/ko-KR/translation.json
+++ b/src/locales/ko-KR/translation.json
@@ -34,5 +34,80 @@
   },
   "history": {
     "clear": "지우기"
+  },
+  "privacy": {
+    "main-title": "개인정보처리방침",
+    "main-contents": "주식회사 웨더뉴스(당사)에서는, 당사 서비스와 당사가 운영하는 웹사이트를 이용해주시는 고객님의 개인정보의 중요성을 인식하고, 그 취급에 대해서 세심한 주의를 기울이고 있습니다. 당사는, 고도의 정보 통신 사회에서의 개인정보 보호의 중요성을 인식하고, 개인정보 취급에 대하여 개인정보 보호에 관한 법률, 기타 개인정보 보호 관련법령 및 가이드라인을 엄수함과 동시에, 이하 방침에 의거하여 개인정보 보호를 위하여 노력하고 있습니다.",
+    "sub-title1": "개인정보 취득에 대하여",
+    "sub-contents1-1": "・당사는 적법하고 공정한 수단으로 개인정보를 취득합니다.",
+    "sub-contents1-2": "・당사 웹사이트에서는 서비스의 제공에 있어서 서비스 회원제 사이트와 전자메일의 전송, 앙케이트 조사 등을 통하여, 이용목적을 명시한 후에 개인정보를 등록해 주시도록 하는 경우가 있습니다.",
+    "sub-title2": "개인정보의 이용에 대하여",
+    "sub-title2-1": "・당사는 보유한 개인정보를 사전에 공표하거나, 취득시에 알려드린 이용목적 범위 내에서, 업무 수행상 필요한 경우에 한하여 이용합니다.",
+    "sub-title2-2": "・당사가 보유하는 개인정보의 이용목적은 다음과 같습니다.",
+    "sub-title2-3": "(1)당사는 이하의 목적으로 고객님의 개인정보를 이용할 수 있습니다.",
+    "sub-contents2-3-a": "a. 서비스 제공이나 계약 절차 등을 위하여",
+    "sub-contents2-3-b": "b. 물품, 서류의 발송 등을 위하여",
+    "sub-contents2-3-c": "c. 전시회, 견학회 등의 당사 이벤트나 서비스의 안내를 위하여",
+    "sub-contents2-3-d": "d. 고객님으로부터 당사로의 문의 등의 대응을 위하여",
+    "sub-contents2-3-e": "e. 인사노무관리에 관한 모든 절차를 위하여",
+    "sub-contents2-3-f": "f. 서비스에서 제3자에 의한 효과적인 광고 전송을 위하여",
+    "sub-contents2-4": "(2) 당사는 개인정보의 취급을 제3자에게 위탁하는 경우에, 개인정보를 적절하게 취급하고 있다고 인정되는 위탁처를 선정한 후, 위탁처의 개인정보 안전관리에 대하여 필요 및 적절한 감독을 실시합니다.",
+    "sub-contents2-5": "(3) 당사는 이용목적 범위 내에서, 당사의 관련회사(유가증권보고서에 기재되어 있는 연결자회사)와의 사이에서, 개인정보를 공동 이용하는 경우가 있습니다.",
+    "sub-contents2-5-a": "a. 공동 이용하는 개인정보 항목",
+    "sub-contents2-5-a-1": "회사명, 소속처, 성명, 직함, 주소, 전화번호, 메일주소, 회사의 홈페이지 주소, 음성데이터, 팩스번호, 기타 명함 등에 기재되는 연락처 정보",
+    "sub-contents2-5-b": "공동으로 이용하는 자의 범위",
+    "sub-contents2-5-b-1": "당사 유가증권보고서 기재의 관계 회사",
+    "sub-contents2-5-b-2": "【유가증권보고서URL】",
+    "sub-contents2-5-c": "c. 이용하는 자의 이용목적",
+    "sub-contents2-5-c-1": "당사 서비스 제공에 관한 업무를 위하여",
+    "sub-contents2-5-d-1": "d. 공동 이용의 관리책임자",
+    "sub-contents2-5-d-2": "주식회사 웨더뉴스",
+    "sub-title3": "개인정보의 제3자 제공에 대하여",
+    "sub-contents3-1": "당사는 이하에서 정하는 경우를 제외하고, 보유하고 있는 개인정보를 사전에 본인의 동의를 구하지 않고 제3자에게 제공하지 않습니다.",
+    "sub-contents3-1-1": "법령에 의거하는 경우",
+    "sub-contents3-1-2": "사람의 생명, 신체 또는 재산의 보호를 위하여 필요가 있는 경우로서, 본인의 동의를 얻는 것이 곤란할 때",
+    "sub-contents3-1-3": "공중위생의 향상 또는 아동의 건전한 육성 추진을 위하여 특별히 필요한 경우로서, 본인의 동의를 얻는 것이 곤란할 때",
+    "sub-contents3-1-4": "국가 기관 또는 지방자치단체, 또는 그 위탁을 받은 자가 법령에서 정한 사항을 수행하는 것에 대하여 협력할 필요가 있는 경우로서, 본인의 동의를 얻음으로써 당해 사무의 수행에 지장을 끼칠 위험이 있을 때",
+    "sub-title4": "개인정보의 위탁처 관리",
+    "sub-contents4-1": "고객님의 개인정보 취급을 제3자에게 위탁하는 경우에는, 계약 체결 등에 의하여 위탁처에 대해서도 안전한 정보관리가 도모될 수 있도록 적절하게 감독하겠습니다.",
+    "sub-title5": "개인정보 관리에 대하여",
+    "sub-contents5-1": "・당사는 개인정보의 정확성을 유지하기 위하여 노력하고, 또한 이를 안전하게 관리하겠습니다.",
+    "sub-contents5-2": "・당사는 취급하는 개인정보의 멸실, 훼손, 조작 및 누설 등을 방지하고, 안전관리를 도모하기 위하여, 부정 액세스, 컴퓨터 바이러스 등에 대한 정보 보안 대책을 포함한 적절한 조치를 강구합니다.",
+    "sub-title6": "개인정보 열람 등에 대하여",
+    "sub-contents6-1": "・당사는 보유하는 개인정보에 관한 열람 등(이용목적의 통지, 공개, 정정・추가・삭제, 이용의 정지・삭제) 청구에 적절하게 대응하겠습니다.",
+    "sub-contents6-2": "・당사가 보유하는 개인정보에 대하여 열람 등을 희망하는 경우에는 ”문의창구(https://ko.weathernews.com/contact/)”로 연락 주시길 바랍니다. 열람 등의 연락을 받은 경우에는 본인으로부터의 연락임을 확인하기 위하여 본인 확인 서류의 제시 등을 요구할 수 있습니다.",
+    "sub-title7": "의견 등의 대응",
+    "sub-contents7-1": "・당사의 개인정보 취급에 대하여 의견, 질문, 고충이 있으시면 당사”문의창구(https://ko.weathernews.com/contact/)”로 연락 주시길 바랍니다.",
+    "sub-title8": "조직・체제",
+    "sub-contents8-1": "・당사는 개인정보 관리자를 임명하고, 개인정보의 적정 관리를 실시하겠습니다.",
+    "sub-contents8-2": "・당사는 임원 및 종업원에 대하여, 개인정보의 보호 및 적정 관리 방법에 대한 연수를 실시하고, 일상 업무에 대한 개인정보의 적정 취급을 철저히 하겠습니다.",
+    "sub-title9": "개인정보보호 법령 준수 기본 규정의 책정・실시・유지・개선",
+    "sub-title9-1": "・ 당사는, 이 방침을 실행하기 위하여 개인정보보호 법령 준수 기본 규정(본 방침, 『개인정보보호규정』및 기타 규정, 규칙을 포함함)을 책정하고, 이를 당사 종사자, 기타 관계자에게 철저하게 주지하여 실시하며, 유지하고, 계속적으로 개선하겠습니다.",
+    "footer-txt1": "2012년 1월 16일 제정",
+    "footer-txt2": "2019년 9월 4일 개정",
+    "footer-txt3": "주식회사 웨더뉴스 대표이사사장 쿠사비라키 치히토",
+    "sub-title10": "링크처에 대한 취급에 대하여",
+    "sub-contents10-1": "당사 웹사이트에서는, 다른 웹사이트로의 링크를 설정하고 있는 경우가 있습니다만, 링크처에서의 개인정보 취급에 관해서는 링크처의 웹사이트에서 확인해 주시기 바랍니다. 당사 웹사이트 외부에서 행해지는 개인 정보의 입력에 대해서는, 당사는 일절의 책임을 지지 않으므로 양해를 부탁드립니다.",
+    "sub-title11": "액세스 로그의 활용에 대하여",
+    "sub-contents11-1": "본 사이트는 유저 편의성 향상을 위해, 이용자 여러분의 액세스 로그를 수집하고 있습니다. 액세스 로그의 수집과 해석에는 Google Analytics를 사용하고 있습니다. Google Analytics에서는 Cookie를 이용하여 개인을 특정할 수 없는 방법으로 로그를 수집하고 있습니다.",
+    "sub-title12": "소셜미디어의 플러그인에 대하여",
+    "sub-contents13-1": "당사 웹사이트 상부에는, ”facebook”을 비롯한 소셜 미디어 네트워크(SNS)의 플러그인이 도입되어 있습니다. 해당 플러그인 기능을 사용하여 SNS의 웹사이트를 열람하는 경우, 해당 SNS에 대하여, 유저가 접속하고 있는 사이트 등의 정보가 자동으로 송신될 수 있습니다. 송신되는 정보의 범위 및 이용 목적 등에 대한 각 SNS사업자의 개인정보처리 방침은 각 사업자의 사이트 등에서 확인을 부탁 드립니다."
+  },
+  "service": {
+    "title1": "이용에 관하여",
+    "contents1": " 주식회사 웨더뉴스(이하 “웨더뉴스”라고 합니다)가 웹사이트에서 제공하는 기상 콘텐츠(이하 “본 콘텐츠”라고 합니다.)는 기상학적 해석에 의한 것입니다. 이 기상학적 해석에 의한 기상 예측 정보에는 해석 방법에 내재하는 한계(적중하지 않을 리스크)가 존재합니다. 그러한 해석의 기초가 되지 않는 급격한 기상 요인 변화 등의 예측 불가능한 요인에 의하여 예보와 실제 기상 상황에 차이가 발생할 수 있습니다. 또한, 지형 등의 국지적인 요인에 의한 소규모의 특이한 기상 상황에 관하여는 예보와의 차이가 생길 수 있습니다. 자연에서의 지상·기상·수상의 급격한 변화는 예측할 수 없는 요소와 인간의 상상을 초월하는 요인에 의하여 불가측한 사태가 발생할 가능성을 항상 내포하고 있습니다. 당사 웹사이트를 이용하실 때는 이용자 본인의 행동을 결정할 시의 어디까지나 참고로서 이용해 주시고, 출발 전에 현지에서 최신 정보를 확인하는 등 이용자 스스로 모든 리스크에 대비할 준비 또는 행동을 해 주시기 바랍니다. 웨더뉴스 및 그 임원, 종업원은 본 콘텐츠의 정보에 의거하거나 본 콘텐츠의 정보를 신뢰하여 행한 활동에 의하여 발생한 어떠한 생명, 신체, 재산상의 손실 또는 손해에 관하여도 책임을 부담하지 않는다는 점에 대하여 미리 양해 부탁드립니다.",
+    "title2": "저작권에 관하여",
+    "contents2": " 본 콘텐츠의 저작권은 원칙적으로 웨더뉴스에 귀속됩니다. 개별 콘텐츠 저작권 외에 홈페이지 형태로 편집한 것에 의한 편집 저작권도 웨더뉴스에 귀속됩니다. 단, 주식회사 웨더뉴스의 직원 이외의 사람에 의한 기고나 외부 사진 작가에 의한 사진 등의 저작권은 원칙적으로 원저작자에게 귀속됩니다.",
+    "title3": "저작권 취급",
+    "contents3": "본 콘텐츠를, 저작권법상 허용되는 “사적 사용”이나 “인용” 등의 범위를 넘어 사용하는 경우, 웨더뉴스의 사용 허락을 받아야 합니다. 외부 기고에 관하여는 원저작자의 허락도 필요합니다. 당사 웹사이트의 화면을 허가 없이 복제, 번역, 번안, 방송, 출판, 판매, 대여하는 등의 행위를 금지합니다. 또한, 영리 단체, 비영리 단체, 개인을 불문하고 당사 웹사이트 이외의 홈페이지, PC통신, 인트라넷, 이메일 등으로 본 콘텐츠의 전부 또는 일부를 주식회사 웨더뉴스의 승낙없이 전용하는 것은 저작권 침해에 해당되므로 금지합니다.",
+    "title4": "허용되는 “인용”의 범위",
+    "contents4": "저작권법에 의한 “인용”이라 함은, 보도, 비평, 연구 기타 목적으로 출처와 인용 부분을 명시하여 목적상 정당한 범위 내에서 기사의 일부를 사용하는 행위를 말합니다. 또한, 인용 부분 외의 부분과 인용 부분 간에 “주종(主従)” 관계가 있을 것이 필요합니다. 이러한 조건이 충족되지 않는 경우, 저작권법에서 인정되는 인용에 해당하지 않으므로 웨더뉴스의 사용 허락이 필요합니다.",
+    "title5": "콘텐츠 전용",
+    "contents5": "웨더뉴스의 허가없이 당사 웹사이트의 독자적인 콘텐츠를 개변, 요약하여 콘텐츠를 전용하는 것을 금지합니다.",
+    "title6": "콘텐츠 다운로드",
+    "contents6": " 개인이 사적 이용 목적으로 본 콘텐츠를 자신의 PC에 다운로드하는 것은, 저작권법에서 인정되는 “사적 사용을 위한 복제“에 원칙적으로 해당하는 것으로 해석합니다. 단, 다운로드한 콘텐츠를 사용할 수 있는 것은 본인 또는 그 동거 가족에 한합니다. 개인이 다운로드한 경우라도 이를 회사 등에서 본인 이외에 대하여 이용하게 하는 것은 영리 또는 비영리의 목적을 불문하고 “사적 사용”의 범위를 초과하므로 웨더뉴스의 허가가 필요합니다.",
+    "title7": "분쟁 해결",
+    "contents7": " 본 콘텐츠 이용과 관련하여 당사와 이용자 간에 발생하는 일체의 분쟁은, 한국법에 준거하여 서울중앙지방법원을 전속적 관할재판소로 하는 소송으로 해결합니다",
+    "contents7-1": " 당사는 위 내용을 정정하는 경우가 있습니다. 그러한 경우, 모든 정보는 이 페이지를 통해 알려드립니다."
   }
 }
