feat: 공유하기 기능 추가

--- a/src/locales/ja-JP/translation.json
+++ b/src/locales/ja-JP/translation.json
@@ -51,8 +51,8 @@
     "sub-contents2-3-d": "d. お客様から当社へのお問い合わせ等の対応のため",
     "sub-contents2-3-e": "e. 人事労務管理に関するあらゆる手続のため",
     "sub-contents2-3-f": "f. サービスから第三者による効果的な広告配信のため",
-    "sub-contents2-4": "(2) 当社は、個人情報の取扱いを第三者に委託する場合において、個人情報を適切に取り扱っていると認められる委託先を選定した上で、委託先の個人情報安全管理について必要及び適切な監督を行います。",
-    "sub-contents2-5": "(3) 当社は利用目的範囲内で、当社の関連会社（有価証券報告書に記載されている連結子会社）との間で、個人情報を共同利用する場合があります。",
+    "sub-title2-4": "(2) 当社は、個人情報の取扱いを第三者に委託する場合において、個人情報を適切に取り扱っていると認められる委託先を選定した上で、委託先の個人情報安全管理について必要及び適切な監督を行います。",
+    "sub-title2-5": "(3) 当社は利用目的範囲内で、当社の関連会社（有価証券報告書に記載されている連結子会社）との間で、個人情報を共同利用する場合があります。",
     "sub-contents2-5-a": "a. 共同利用する個人情報項目",
     "sub-contents2-5-a-1": "会社名、所属先、氏名、肩書き、住所、電話番号、メールアドレス、会社のホームページアドレス、音声データ、ファックス番号その他名刺等に記載される連絡先情報",
     "sub-contents2-5-b": "b. 共同で利用する者の範囲",
@@ -91,7 +91,7 @@
     "sub-title11": "アクセスログの活用について",
     "sub-contents11-1": "本サイトはユーザー利便性向上のため、利用者の皆様のアクセスログを収集しています。 アクセスログの収集と解釈にはGoogle Analyticsを使用しています。 Google Analyticsでは、Cookieを利用して個人を特定できない方法でログを収集しています。",
     "sub-title12": "ソーシャルメディアのプラグインについて",
-    "sub-contents13-1": "当社ウェブサイト上部には、“Facebook”をはじめとするソーシャルメディアネットワーク（SNS）のプラグインが導入されています。 当該プラグイン機能を使用してSNSのウェブサイトを閲覧する場合、当該SNSに対して、ユーザーが接続しているサイト等の情報が自動的に送信されることがあります。 送信される情報の範囲及び利用目的等について、各SNS事業者の個人情報処理方針は、各事業者のサイト等で確認をお願いします。"
+    "sub-contents12-1": "当社ウェブサイト上部には、“Facebook”をはじめとするソーシャルメディアネットワーク（SNS）のプラグインが導入されています。 当該プラグイン機能を使用してSNSのウェブサイトを閲覧する場合、当該SNSに対して、ユーザーが接続しているサイト等の情報が自動的に送信されることがあります。 送信される情報の範囲及び利用目的等について、各SNS事業者の個人情報処理方針は、各事業者のサイト等で確認をお願いします。"
   },
   "service": {
     "title1": "利用規約",
