--- a/src/locales/ko-KR/translation.json
+++ b/src/locales/ko-KR/translation.json
@@ -51,8 +51,8 @@
     "sub-contents2-3-d": "d. 고객님으로부터 당사로의 문의 등의 대응을 위하여",
     "sub-contents2-3-e": "e. 인사노무관리에 관한 모든 절차를 위하여",
     "sub-contents2-3-f": "f. 서비스에서 제3자에 의한 효과적인 광고 전송을 위하여",
-    "sub-contents2-4": "(2) 당사는 개인정보의 취급을 제3자에게 위탁하는 경우에, 개인정보를 적절하게 취급하고 있다고 인정되는 위탁처를 선정한 후, 위탁처의 개인정보 안전관리에 대하여 필요 및 적절한 감독을 실시합니다.",
-    "sub-contents2-5": "(3) 당사는 이용목적 범위 내에서, 당사의 관련회사(유가증권보고서에 기재되어 있는 연결자회사)와의 사이에서, 개인정보를 공동 이용하는 경우가 있습니다.",
+    "sub-title2-4": "(2) 당사는 개인정보의 취급을 제3자에게 위탁하는 경우에, 개인정보를 적절하게 취급하고 있다고 인정되는 위탁처를 선정한 후, 위탁처의 개인정보 안전관리에 대하여 필요 및 적절한 감독을 실시합니다.",
+    "sub-title2-5": "(3) 당사는 이용목적 범위 내에서, 당사의 관련회사(유가증권보고서에 기재되어 있는 연결자회사)와의 사이에서, 개인정보를 공동 이용하는 경우가 있습니다.",
     "sub-contents2-5-a": "a. 공동 이용하는 개인정보 항목",
     "sub-contents2-5-a-1": "회사명, 소속처, 성명, 직함, 주소, 전화번호, 메일주소, 회사의 홈페이지 주소, 음성데이터, 팩스번호, 기타 명함 등에 기재되는 연락처 정보",
     "sub-contents2-5-b": "공동으로 이용하는 자의 범위",
@@ -91,7 +91,7 @@
     "sub-title11": "액세스 로그의 활용에 대하여",
     "sub-contents11-1": "본 사이트는 유저 편의성 향상을 위해, 이용자 여러분의 액세스 로그를 수집하고 있습니다. 액세스 로그의 수집과 해석에는 Google Analytics를 사용하고 있습니다. Google Analytics에서는 Cookie를 이용하여 개인을 특정할 수 없는 방법으로 로그를 수집하고 있습니다.",
     "sub-title12": "소셜미디어의 플러그인에 대하여",
-    "sub-contents13-1": "당사 웹사이트 상부에는, ”facebook”을 비롯한 소셜 미디어 네트워크(SNS)의 플러그인이 도입되어 있습니다. 해당 플러그인 기능을 사용하여 SNS의 웹사이트를 열람하는 경우, 해당 SNS에 대하여, 유저가 접속하고 있는 사이트 등의 정보가 자동으로 송신될 수 있습니다. 송신되는 정보의 범위 및 이용 목적 등에 대한 각 SNS사업자의 개인정보처리 방침은 각 사업자의 사이트 등에서 확인을 부탁 드립니다."
+    "sub-contents12-1": "당사 웹사이트 상부에는, ”facebook”을 비롯한 소셜 미디어 네트워크(SNS)의 플러그인이 도입되어 있습니다. 해당 플러그인 기능을 사용하여 SNS의 웹사이트를 열람하는 경우, 해당 SNS에 대하여, 유저가 접속하고 있는 사이트 등의 정보가 자동으로 송신될 수 있습니다. 송신되는 정보의 범위 및 이용 목적 등에 대한 각 SNS사업자의 개인정보처리 방침은 각 사업자의 사이트 등에서 확인을 부탁 드립니다."
   },
   "service": {
     "title1": "이용에 관하여",
