feat: meta tag 동적 생성 기능 추가

--- a/src/locales/en-US/translation.json
+++ b/src/locales/en-US/translation.json
@@ -1,4 +1,9 @@
 {
+  "meta": {
+    "noscript": "You need to enable JavaScript to run this app.",
+    "title": "Todaystory",
+    "description": "Check out today's story."
+  },
   "header": {
     "logo": "Todaystory",
     "date": "{{val, datetime}}"
