--- a/src/locales/ja-JP/translation.json
+++ b/src/locales/ja-JP/translation.json
@@ -1,4 +1,9 @@
 {
+  "meta": {
+    "noscript": "ジャバスクリプトが有効になっていません。設定により、ジャバスクリプトを許可するか、最新のブラウザを利用してください。",
+    "title": "今日のストーリー",
+    "description": "今日のストーリーを確認してみてください。"
+  },
   "header": {
     "logo": "今日のストーリー",
     "date": "{{val, datetime}}"
