--- a/src/locales/ko-KR/translation.json
+++ b/src/locales/ko-KR/translation.json
@@ -1,4 +1,9 @@
 {
+  "meta": {
+    "noscript": "자바스크립트가 활성화되어있지 않습니다. 설정을 통해 자바스크립트를 허용하거나 최신 브라우저를 이용해주세요.",
+    "title": "오늘의 스토리",
+    "description": "오늘의 스토리를 확인해보세요."
+  },
   "header": {
     "logo": "오늘의 스토리",
     "date": "{{val, datetime}}"
