feat: 공감한 콘텐츠 삭제 기능 구현, No Stories 표시, API validation 추가

--- a/src/locales/en-US/translation.json
+++ b/src/locales/en-US/translation.json
@@ -39,5 +39,9 @@
   },
   "history": {
     "clear": "clear"
+  },
+  "noStories": {
+    "favorite": "No Favorites",
+    "history": "No History"
   }
 }
