--- a/src/locales/ja-JP/translation.json
+++ b/src/locales/ja-JP/translation.json
@@ -40,6 +40,10 @@
   "history": {
     "clear": "消すんです"
   },
+  "noStories": {
+    "favorite": "共感した記事がありません",
+    "history": "最近見た記事はありません"
+  },
   "privacy": {
     "main-title": "プライバシーポリシー",
     "main-contents": "株式会社ウェザーニューズ（当社）では、当社サービスと当社が運営するウェブサイトをご利用いただくお客様の個人情報の重要性を認識し、その取り扱いについて細心の注意を払っています。当社は、高度な情報通信社会における個人情報保護の重要性を認識し、個人情報の取扱いについて個人情報保護に関する法律その他個人情報保護関連法令及びガイドラインを厳守するとともに、以下の方針に基づき個人情報保護に努めています。",
