--- a/src/locales/ko-KR/translation.json
+++ b/src/locales/ko-KR/translation.json
@@ -40,6 +40,10 @@
   "history": {
     "clear": "지우기"
   },
+  "noStories": {
+    "favorite": "공감한 콘텐츠 없음",
+    "history": "최근 본 콘텐츠 없음"
+  },
   "privacy": {
     "main-title": "개인정보처리방침",
     "main-contents": "주식회사 웨더뉴스(당사)에서는, 당사 서비스와 당사가 운영하는 웹사이트를 이용해주시는 고객님의 개인정보의 중요성을 인식하고, 그 취급에 대해서 세심한 주의를 기울이고 있습니다. 당사는, 고도의 정보 통신 사회에서의 개인정보 보호의 중요성을 인식하고, 개인정보 취급에 대하여 개인정보 보호에 관한 법률, 기타 개인정보 보호 관련법령 및 가이드라인을 엄수함과 동시에, 이하 방침에 의거하여 개인정보 보호를 위하여 노력하고 있습니다.",
