fix: 카테고리/채널 페이지 콘텐츠 없을 때 빈 페이지 수정

--- a/src/locales/ja-JP/translation.json
+++ b/src/locales/ja-JP/translation.json
@@ -41,6 +41,7 @@
     "clear": "消すんです"
   },
   "noStories": {
+    "stories": "記事がありません",
     "favorite": "共感した記事がありません",
     "history": "最近見た記事はありません"
   },
