--- a/src/locales/en-US/translation.json
+++ b/src/locales/en-US/translation.json
@@ -41,6 +41,7 @@
     "clear": "clear"
   },
   "noStories": {
+    "stories": "No Stories",
     "favorite": "No Favorites",
     "history": "No History"
   }
