--- a/src/locales/ko-KR/translation.json
+++ b/src/locales/ko-KR/translation.json
@@ -41,6 +41,7 @@
     "clear": "지우기"
   },
   "noStories": {
+    "stories": "콘텐츠 없음",
     "favorite": "공감한 콘텐츠 없음",
     "history": "최근 본 콘텐츠 없음"
   },
